[package]
name = "art-bot-bluesky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adenosine = { git="https://github.com/ssempervirens/adenosine", branch="main"}
anyhow = "1"
tracing-subscriber = "0.3"
tracing = "0.1"
serde_json = "1"
csv = "1.1"
rand = "0.8.5"
clap = { version = "4.2.1", features = ["derive"] }
